[gd_scene load_steps=13 format=2]

[ext_resource path="res://AlbertText-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://telaInicial.gd" type="Script" id=2]
[ext_resource path="res://fotoinicial.png" type="Texture" id=3]

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.85098, 0.85098, 0.85098, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 80
font_data = ExtResource( 1 )

[node name="telaInicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbour_top = NodePath("controles/botaoSair")
focus_neighbour_bottom = NodePath("controles/botaoStart")
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="controles" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -70.0
margin_right = 94.5
margin_bottom = 70.0

[node name="botaoStart" type="Button" parent="controles"]
margin_right = 189.0
margin_bottom = 47.0
focus_neighbour_top = NodePath("../botaoSair")
theme = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.835294, 0.823529, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.94902, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Come√ßar"

[node name="botaoControles" type="Button" parent="controles"]
margin_top = 51.0
margin_right = 189.0
margin_bottom = 98.0
theme = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.835294, 0.823529, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.94902, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Controles"

[node name="botaoSobre" type="Button" parent="controles"]
margin_top = 102.0
margin_right = 189.0
margin_bottom = 149.0
theme = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.835294, 0.823529, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.94902, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Sobre"

[node name="botaoSair" type="Button" parent="controles"]
margin_top = 153.0
margin_right = 189.0
margin_bottom = 200.0
focus_neighbour_bottom = NodePath("../botaoStart")
theme = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.835294, 0.823529, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.94902, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Sair"

[node name="Fotoinicial" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 512, 288 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 32.0
margin_right = 70.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 9 )
text = "Kingo"

[connection signal="pressed" from="controles/botaoStart" to="." method="_on_botaoStart_pressed"]
[connection signal="pressed" from="controles/botaoControles" to="." method="_on_botaoControles_pressed"]
[connection signal="pressed" from="controles/botaoSobre" to="." method="_on_botaoSobre_pressed"]
[connection signal="pressed" from="controles/botaoSair" to="." method="_on_botaoSair_pressed"]
